RESOLVED FIXED 52705
[Qt] GraphicsContext::strokePath() paints solid shadows with incorrect alpha
https://bugs.webkit.org/show_bug.cgi?id=52705
Summary [Qt] GraphicsContext::strokePath() paints solid shadows with incorrect alpha
Helder Correia
Reported 2011-01-19 02:06:37 PST
This is related to bug 52611. The shadow color alpha must be multiplied by the context pen alpha. Fixing this results in correct behavior for Canvas path stroke() and strokeRect() [which relies on stroke()].
Attachments
Patch (19.57 KB, patch)
2011-01-19 02:09 PST, Helder Correia
no flags
Helder Correia
Comment 1 2011-01-19 02:09:37 PST
Andreas Kling
Comment 2 2011-01-19 13:43:32 PST
Comment on attachment 79402 [details] Patch r=me, let's hope nobody else chokes on the test :)
WebKit Commit Bot
Comment 3 2011-01-19 21:57:00 PST
The commit-queue encountered the following flaky tests while processing attachment 79402 [details]: fast/spatial-navigation/snav-iframe-flattening-simple.html bug 52783 (author: tonikitoo@webkit.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2011-01-19 21:57:59 PST
Comment on attachment 79402 [details] Patch Clearing flags on attachment: 79402 Committed r76206: <http://trac.webkit.org/changeset/76206>
WebKit Commit Bot
Comment 5 2011-01-19 21:58:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.