2011-01-19  Helder Correia  <helder@sencha.com>

Reviewed by Andreas Kling.

        [Qt] GraphicsContext::strokePath() paints solid shadows with incorrect alpha
        https://bugs.webkit.org/show_bug.cgi?id=52705

        This is related to bug 52611. The shadow color alpha must be multiplied
        by the context pen alpha. Fixing this results in correct behavior for
        Canvas path stroke() and strokeRect() [which relies on stroke()].

        * fast/canvas/canvas-strokePath-alpha-shadow-expected.txt: Added.
        * fast/canvas/canvas-strokePath-alpha-shadow.html: Added.
        * fast/canvas/canvas-strokeRect-alpha-shadow-expected.txt: Added.
        * fast/canvas/canvas-strokeRect-alpha-shadow.html: Added.
        * fast/canvas/script-tests/canvas-strokePath-alpha-shadow.js: Added.
        * fast/canvas/script-tests/canvas-strokeRect-alpha-shadow.js: Added.
2011-01-19  Helder Correia  <helder@sencha.com>

        Reviewed by Andreas Kling.

        [Qt] GraphicsContext::strokePath() paints solid shadows with incorrect alpha
        https://bugs.webkit.org/show_bug.cgi?id=52705

        This is related to bug 52611. The shadow color alpha must be multiplied
        by the context pen alpha. Fixing this results in correct behavior for
        Canvas path stroke() and strokeRect() [which relies on stroke()].

        Tests: fast/canvas/canvas-strokePath-alpha-shadow.html
               fast/canvas/canvas-strokeRect-alpha-shadow.html

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::strokePath):

Canonical link: https://commits.webkit.org/66444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76206 268f45cc-cd09-0410-ab3c-d52691b4dbfc